improved support for framework-level CSRF/XSRF protection

--- a/platform/OSP/Web/bundle/bundle.properties
+++ b/platform/OSP/Web/bundle/bundle.properties
@@ -1,6 +1,6 @@
 # Bundle properties for the Web bundle.
 #
-# Copyright (c) 2007-2012 by Applied Informatics.
+# Copyright (c) 2007-2018 by Applied Informatics.
 # All rights reserved.
 
 # The name of the auth service to use.
@@ -13,6 +13,10 @@ cacheResources = false
 # Enable gzip compression for text/* response content.
 compressResponses = true
 compressedMediaTypes = text/*,application/javascript
+
+# CSRF/XSRF Protection
+csrfCookie = XSRF-TOKEN
+csrfProtectionEnabled = true
 
 # Messages returned by the server.
 message.secure    = A secure connection is required to access $1 on this server.
